--- a/app/src/main/res/layout/county_data_list.xml
+++ b/app/src/main/res/layout/county_data_list.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/grey">
 
     <LinearLayout
         android:id="@+id/layout1"
@@ -67,12 +68,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="100dp">
+                android:layout_marginStart="20dp">
 
                 <ImageView
                     android:id="@+id/countryImg"
                     android:layout_width="120dp"
                     android:layout_height="70dp"
+                    android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_launcher_background"/>
             </LinearLayout>
 
