--- a/app/src/main/res/layout/county_data_list.xml
+++ b/app/src/main/res/layout/county_data_list.xml
@@ -16,129 +16,130 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <RelativeLayout
-                android:id="@+id/layout3"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:padding="10dp"
+                android:text="Name"
+                android:textColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/country_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Name: "
-                    android:textColor="@color/black"
-                    android:padding="10dp" />
+            <TextView
+                android:id="@+id/country_name_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp" />
 
-                <TextView
-                    android:id="@+id/country_name_data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_toEndOf="@id/country_name"
-                    android:padding="10dp"
-                    android:text="name_data"
-                    android:textSize="15sp" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/country_capital"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/country_name"
-                    android:layout_marginTop="5dp"
-                    android:text="Capital"
-                    android:padding="10dp"
-                    android:textColor="@color/black"/>
+        <LinearLayout
+            android:id="@+id/layout3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/country_capital_data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/country_name"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_toEndOf="@id/country_capital"
-                    android:padding="10dp"
-                    android:text="capital_data"
-                    android:textSize="15sp" />
-            </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="Capital"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/country_capital_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/layout4"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="20dp">
+                android:orientation="vertical"
+                android:layout_weight=".7"
+                >
+
+                <LinearLayout
+                    android:id="@+id/layout5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="51dp"
+                        android:padding="10dp"
+                        android:text="Region"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/region_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="Sub Region"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/sub_region_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="Population"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/population_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp" />
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/countryImg"
                     android:layout_width="120dp"
                     android:layout_height="70dp"
+                    android:layout_marginStart="40dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_launcher_background"/>
+                    android:src="@drawable/ic_launcher_background" />
             </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/layout5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Region"
-                android:padding="10dp"
-                android:textColor="@color/black"/>
-
-            <TextView
-                android:id="@+id/region_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/layout6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sub Region"
-                android:padding="10dp"
-                android:textColor="@color/black"/>
-
-            <TextView
-                android:id="@+id/sub_region_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layout7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Population"
-                android:padding="10dp"
-                android:textColor="@color/black"/>
-
-            <TextView
-                android:id="@+id/population_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"/>
-
         </LinearLayout>
 
         <LinearLayout
@@ -150,15 +151,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Languages"
                 android:padding="10dp"
-                android:textColor="@color/black"/>
+                android:text="Languages"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/lang_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"/>
+                android:padding="10dp" />
 
         </LinearLayout>
 
@@ -171,15 +172,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Borders"
                 android:padding="10dp"
-                android:textColor="@color/black"/>
+                android:text="Borders"
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/borders_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"/>
+                android:padding="10dp" />
 
         </LinearLayout>
 
@@ -187,8 +188,8 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/black"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:background="@color/black" />
 
     </LinearLayout>
 </RelativeLayout>
